# whiteball-backend

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  alembic.ini  description.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
_docs/: Whiteball-Data-Input-Proposal.xlsx
alembic/: env.py
alembic/versions/: 001.mermaid  001_initial.py  002_imports_reports_logs.py
app/: __init__.py  __main__.py  main.py
app/api/: deps.py  router.py
app/api/routes/: auth.py  classification_elements.py  company.py  dictionaries.py  packaging.py  product_elements.py  products.py  products_classification.py  reference.py  users.py
app/core/: config.py  exceptions.py  security.py
app/db/: __init__.py  base.py  session.py
app/models/: __init__.py  company.py  dictionary.py  packaging.py  product.py  product_classification.py  product_elements.py  product_packaging_association.py  reference_table.py  user.py
app/schemas/: auth.py  classification_elements.py  common.py  company.py  dictionary.py  packaging.py  product.py  user.py
app/scripts/: seed_test_company.py
data/: data_001.py
tests/: conftest.py  test_auth.py  test_classification_elements.py  test_dictionaries.py  test_packaging.py  test_product_elements.py  test_products.py
