[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "whiteball-backend"
version = "0.1.0"
description = "Backend for Whiteball packaging reporting platform"
readme = "README.md"
requires-python = ">=3.12,<3.13"
authors = [
    {name = "Whiteball Team", email = "dev@whiteball.local"}
]

dependencies = [
    "fastapi==0.136.1",
    "uvicorn[standard]==0.46.0",
    "sqlalchemy==2.0.49",
    "alembic==1.18.4",
    "pydantic[email]==2.13.4",
    "pydantic-settings==2.14.1",
    "psycopg2-binary==2.9.12",
    "python-jose[cryptography]==3.5.0",
    "passlib[argon2,bcrypt]==1.7.4",
    "python-multipart==0.0.28",
    "python-dotenv==1.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.1.0",
    "ruff==0.15.12",
    "ty==0.0.35",
    "pre-commit==4.6.0",
    "httpx==0.28.1",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "C4", "UP"]
ignore = ["B008"]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
exclude = [
    "alembic/.*",
]

[[tool.mypy.overrides]]
module = "app.*"
ignore_errors = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --cov=app --cov-report=term-missing"

[tool.hatch.build.targets.wheel]
packages = ["app"]
